tests/e2e/fail/str_len_field.ep
# COMPILE_ERROR: type str has no field 'len'
fun main(): void {
    let text = "abc"
    print(itoa(text.len))
}
